@@ -44,16 +44,4 @@
         </dependency>
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <!-- Permit startup-helper reflection only from the separate test module. -->
-                    <argLine>--add-opens io.allurx.kit.selenium/io.allurx.kit.selenium=io.allurx.kit.selenium.test</argLine>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 </project>
